--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 
   <title>Frontend Mentor | Order summary card</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link href="https://fonts.google.com/specimen/Red+Hat+Display" rel="stylesheet" </head> <body>
-
+  <link href="https://fonts.google.com/specimen/Red+Hat+Display" rel="stylesheet"/>
+  
+  </head>
+  
+  <body>
+<main>
   <div class="container">
     <div class="card-container">
       <div class="card-header">
         <img src="/images/illustration-hero.svg" alt="" />
       </div>
       <div class="card-content">
-        <h2 class="card-heading"> Order Summary</h2>
+        <h1 class="card-heading"> Order Summary</h1>
         <!--Card Heading-->
         <p class="card-paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!</p>
@@ -58,7 +62,7 @@
 
 
   </div>
-
+    </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
