--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Frontend Mentor | Order summary card</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link href="https://fonts.google.com/specimen/Red+Hat+Display" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Red+Hat+Display" />
   
   </head>
   
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="card-container">
       <div class="card-header">
-        <img src="/images/illustration-hero.svg" alt="" />
+        <img src="/images/illustration-hero.svg" alt="Hero illustration" />
       </div>
       <div class="card-content">
         <h1 class="card-heading"> Order Summary</h1>
@@ -30,7 +30,7 @@
         <div class="card-anual-section">
           <div class="anual-content-container">
             <div class="anual-plan-container">
-              <img src="/images/icon-music.svg" alt="" /> <!--Music Picture-->
+              <img src="/images/icon-music.svg" alt="Music note picture" /> <!--Music Picture-->
              
 
               <div class="anual-plan-content">
