--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-<main>
+<main role="main">
   <div class="container">
     <div class="card-container">
       <div class="card-header">
@@ -60,7 +60,8 @@
 
   </div>
     </main>
-  <footer>
+     
+  <footer role="contentinfo">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/Basti576">Sebastian</a>.
