--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <!-- displays site properly based on user's device -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
   <title>Frontend Mentor | Order summary card</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Red+Hat+Display">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Red+Hat+Display" />
   </head>
   
   <body>
