--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
-  <title>Frontend Mentor | Order summary card</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Red+Hat+Display" />
+  <link rel="stylesheet" href='https://fonts.google.com/specimen/Red+Hat+Display' />
+  <title>Frontend Mentor | Order summary card</title>
   </head>
   
   <body>
